# pylean4

./: .gitignore  Cargo.toml  README.md  pyproject.toml
pylean4-ai/: Cargo.toml  build.rs
pylean4-ai/src/: lib.rs  meta_context.rs  pool.rs  proof_env.rs  tactic_state.rs
pylean4-ai/tests/: test_e2e.rs  test_lean.rs
pylean4-core/: Cargo.toml  build.rs
pylean4-core/src/: closure.rs  conversion.rs  environment.rs  error.rs  lib.rs  meta.rs  module.rs  object.rs  runtime.rs
pylean4-core/src/types/: mod.rs  nat.rs  string.rs
python/pylean4/: __init__.py  _ai.pyi  _core.py  _core.pyi  _jupyter.py  _runtime.py
tests/: test_e2e.py
