[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pylean4"
version = "0.1.0"
description = "Python FFI bindings for Lean4 theorem prover — high-performance AI/RL acceleration"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.10"
keywords = ["lean4", "theorem-prover", "ai", "reinforcement-learning", "formal-verification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-benchmark"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pylean4._core"
