[package]
name = "pylean4-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for Lean4 via leo3 — core layer"

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
leo3.workspace = true
pyo3.workspace = true
